@@ -12,9 +12,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
+import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -27,12 +28,14 @@ public class OrderService {
     private final MercadoPagoService mercadoPagoService;
 
     @Transactional
-    public Order createOrder(UUID userId, OrderRequestDTO orderRequestDTO, String idempotencyKey) {
-        if (idempotencyKey != null && !idempotencyKey.trim().isEmpty()) {
+    public Order createOrder(UUID userId, OrderRequestDTO dto, String idempotencyKey) {
+        if (idempotencyKey != null && !idempotencyKey.isBlank()) {
             Optional<Order> existing = orderRepository.findByIdempotencyKey(idempotencyKey);
-            if (existing.isPresent()) {
-                return existing.get();
-            }
+            if (existing.isPresent()) return existing.get();
+        }
+
+        if (dto.getPaymentMethod() == PaymentMethod.PIX_MANUAL) {
+            validatePixFields(dto);
         }
 
         User user = userRepository.findById(userId)
@@ -40,58 +43,61 @@ public class OrderService {
 
         Order order = new Order();
         order.setUser(user);
-        order.setStatus("PENDING_PAYMENT");
         order.setIdempotencyKey(idempotencyKey);
 
         BigDecimal total = BigDecimal.ZERO;
 
-        for (OrderItemRequestDTO itemDto : orderRequestDTO.getItems()) {
+        for (OrderItemRequestDTO itemDto : dto.getItems()) {
             Product product = productRepository.findById(itemDto.getProductId())
-                    .orElseThrow(() -> new IllegalArgumentException("Product not found"));
-            
+                    .orElseThrow(() -> new IllegalArgumentException("Product not found: " + itemDto.getProductId()));
+
             Variant variant = variantRepository.findById(itemDto.getVariantId())
-                    .orElseThrow(() -> new IllegalArgumentException("Variant not found"));
+                    .orElseThrow(() -> new IllegalArgumentException("Variant not found: " + itemDto.getVariantId()));
 
             if (variant.getStock() < itemDto.getQuantity()) {
-                throw new IllegalArgumentException("Not enough stock for variant: " + variant.getSku());
+                throw new IllegalArgumentException("Insufficient stock for variant: " + variant.getSku());
             }
 
-            // Reduce stock
             variant.setStock(variant.getStock() - itemDto.getQuantity());
 
-            // Create OrderItem with SNAPSHOT details
             OrderItem orderItem = new OrderItem();
             orderItem.setProduct(product);
             orderItem.setVariant(variant);
             orderItem.setQuantity(itemDto.getQuantity());
-            
-            // Set historical snapshot details
             orderItem.setProductName(product.getName());
             orderItem.setSku(variant.getSku());
             orderItem.setVariantName(variant.getName());
-            orderItem.setImageUrl(product.getImages() != null && !product.getImages().isEmpty() ? product.getImages().get(0) : "");
+            orderItem.setImageUrl(product.getImages() != null && !product.getImages().isEmpty()
+                    ? product.getImages().get(0) : "");
 
-            // Hard-copy the price at this exact moment
             BigDecimal unitPrice = variant.getPrice();
             orderItem.setUnitPrice(unitPrice);
-            
-            BigDecimal itemTotal = unitPrice.multiply(BigDecimal.valueOf(itemDto.getQuantity()));
-            orderItem.setTotalPrice(itemTotal);
+            orderItem.setTotalPrice(unitPrice.multiply(BigDecimal.valueOf(itemDto.getQuantity())));
 
             order.addItem(orderItem);
-            total = total.add(itemTotal);
+            total = total.add(orderItem.getTotalPrice());
         }
 
         order.setSubtotal(total);
         order.setTotal(total);
 
-        // Create initial payment record
         Payment payment = new Payment();
-        payment.setPaymentMethod(orderRequestDTO.getPaymentMethod());
-        payment.setStatus("PENDING");
+        payment.setPaymentMethod(dto.getPaymentMethod());
         payment.setAmount(total);
-        order.addPayment(payment);
 
+        if (dto.getPaymentMethod() == PaymentMethod.PIX_MANUAL) {
+            order.setStatus("AWAITING_APPROVAL");
+            order.setPayerName(dto.getPayerName());
+            order.setPayerCpf(dto.getPayerCpf());
+            order.setPayerPhone(dto.getPayerPhone());
+            order.setPixReceiptUrl(dto.getPixReceiptUrl());
+            payment.setStatus("AWAITING_APPROVAL");
+        } else {
+            order.setStatus("PENDING_PAYMENT");
+            payment.setStatus("PENDING");
+        }
+
+        order.addPayment(payment);
         return orderRepository.save(order);
     }
 
@@ -103,5 +109,86 @@ public class OrderService {
             throw new SecurityException("Unauthorized access to this order");
         }
         return mercadoPagoService.createCheckoutPreference(order);
+    }
+
+    @Transactional(readOnly = true)
+    public List<Order> getPendingPixOrders() {
+        return orderRepository.findByStatus("AWAITING_APPROVAL");
+    }
+
+    @Transactional
+    public Order approvePix(UUID orderId, UUID adminId) {
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+
+        if (!"AWAITING_APPROVAL".equals(order.getStatus())) {
+            throw new IllegalStateException("Order is not awaiting approval. Current status: " + order.getStatus());
+        }
+
+        order.setStatus("PAID");
+        order.setApprovedBy(adminId);
+        order.setApprovedAt(LocalDateTime.now());
+
+        order.getPayments().forEach(p -> p.setStatus("APPROVED"));
+
+        return orderRepository.save(order);
+    }
+
+    @Transactional
+    public Order rejectPix(UUID orderId, UUID adminId) {
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new IllegalArgumentException("Order not found"));
+
+        if (!"AWAITING_APPROVAL".equals(order.getStatus())) {
+            throw new IllegalStateException("Order is not awaiting approval. Current status: " + order.getStatus());
+        }
+
+        restoreStock(order);
+
+        order.setStatus("REJECTED");
+        order.setRejectedBy(adminId);
+        order.setRejectedAt(LocalDateTime.now());
+
+        order.getPayments().forEach(p -> p.setStatus("REJECTED"));
+
+        return orderRepository.save(order);
+    }
+
+    @Transactional
+    public int expireOldPixOrders() {
+        LocalDateTime expiryTime = LocalDateTime.now().minusHours(24);
+        List<Order> expired = orderRepository.findExpiredPixOrders(expiryTime);
+
+        for (Order order : expired) {
+            restoreStock(order);
+            order.setStatus("EXPIRED");
+            order.getPayments().forEach(p -> p.setStatus("EXPIRED"));
+        }
+
+        orderRepository.saveAll(expired);
+        return expired.size();
+    }
+
+    private void restoreStock(Order order) {
+        for (OrderItem item : order.getItems()) {
+            if (item.getVariant() != null) {
+                item.getVariant().setStock(item.getVariant().getStock() + item.getQuantity());
+            }
+        }
+    }
+
+    private void validatePixFields(OrderRequestDTO dto) {
+        if (dto.getPayerName() == null || dto.getPayerName().isBlank()) {
+            throw new IllegalArgumentException("Payer name is required for PIX_MANUAL orders");
+        }
+        if (dto.getPayerCpf() == null || dto.getPayerCpf().isBlank()) {
+            throw new IllegalArgumentException("Payer CPF is required for PIX_MANUAL orders");
+        }
+        if (dto.getPayerPhone() == null || dto.getPayerPhone().isBlank()) {
+            throw new IllegalArgumentException("Payer phone is required for PIX_MANUAL orders");
+        }
+        if (dto.getPixReceiptUrl() == null || dto.getPixReceiptUrl().isBlank()) {
+            throw new IllegalArgumentException("Pix receipt URL is required for PIX_MANUAL orders");
+        }
     }
 }
